[project]
name = "comfyui-tostai"
description = "NODES: SendToTostAI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/camenduru/ComfyUI-TostAI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TostAI"
Icon = ""
